- Fixes issues where SideDrawer wasn't visibly rendered when screen resized;

--- a/client/src/shared/components/Navigation/SideDrawer.css
+++ b/client/src/shared/components/Navigation/SideDrawer.css
@@ -4,7 +4,7 @@
   top: 0;
   z-index: 100;
   height: 100vh;
-  width: 79%;
+  width: 400px;
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
